# rtfreporter

./: .Rbuildignore  .gitattributes  .gitignore  .lintr  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  LEARNING.md  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  codecov.yml  fix_feature_test.py  fix_quick.py  parse_rtf_preview.py  show_shift_table.py
R/: as_rtftable.R  as_rtftables.R  assemble_rtf.R  assemble_spec.R  blank_rows.R  cell_format.R  col_header.R  defaults.R  flextable_adapter.R  format_count_pct.R  generate_rtfreport.R  gt_adapter.R  hello.R  huxtable_adapter.R  methods.R  paginate.R  pipe-composition.R  plot.R  rtables_adapter.R  rtf_border.R  rtf_page.R  rtf_replace_text.R  rtf_table_style.R  rtfplot.R  rtfreport.R  rtftable.R  set_blank_rows.R  wrappers.R  zzz.R
data-raw/: .gitignore  create_sample_tables.R  gen_tlg_catalog_rtf.R  showcase_ae.R  showcase_dm.R
doc/: rtfreporter-pipes.R  rtfreporter-quickstart.html
man/: add_block.Rd  add_col_header_row.Rd  add_figure.Rd  add_listing.Rd  add_page.Rd  add_section.Rd  add_section_from_dataframes.Rd  add_table.Rd  as_rtftable.Rd  as_rtftables.Rd  assemble_files.Rd  assemble_folder.Rd  assemble_from_spec.Rd  assemble_rtf.Rd  assemble_spec.Rd  assemble_toc.Rd  auto_col_widths.Rd  blank_rows_by_change.Rd  blank_rows_by_rule.Rd  (+70 more)
python/: README.md  pyproject.toml
python/src/rtfreporter/: __init__.py  core.py
python/src/rtfreporter/resources/: rtf_commands.json
python/tests/: test_core.py
python/tests/testdata/: ae.csv  ae_cohort.csv  dm_cohort.csv
(+230 files in other folders)
