[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtfreporter"
version = "0.0.1"
description = "Cross-language RTF reporting toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "ichirio", email = "ichirio@example.com"}
]
dependencies = ["pandas>=1.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtfreporter = ["resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
